--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ var zoom = 100;
 // Defining Variables
 var lasttime = 0;
 var fpsrec = 0;
+var scalar = 40;
 
 let left = false;
 let right = false;
@@ -44,49 +45,51 @@ this.lightpole.src = "lightpole.png";
 function startGame() {
     gameWindow.start(0, 0, 0, zoom);
     player.start();
-    test = new testdot();
-    fpscount = new displaytext(100, 100, "FPS: Error", "left", size=30)
-    speedometer = new displaytext(100, 150, "Speed: Error", "left", size=30)
-    posdebug = new displaytext(100, 200, "Position: Error", "left", size=30)
+    test = new testcirc();
+    fpscount = new displaytext(50, 50, "FPS: Error", "left", size=30)
+    speedometer = new displaytext(50, 100, "Speed: Error", "left", size=30)
+    posdebug = new displaytext(50, 150, "Position: Error", "left", size=30)
 
-    spritelist = [player, fpscount, speedometer, posdebug, pausemenu]
+    spritelist = [player, test, fpscount, speedometer, posdebug, pausemenu]
 
     terrain = [
-        new terrain(0, 0, 0, 600, 800, asphaltpreload),
-        new terrain(0, 0, 0, 5000, 5000, grasspreload),
+        //new shape("rect", 0, 0, 0, 5, 5, "darkgray"),
 
-        new shape("rect", 150, 500, 30, 100, 200, "darkgray"),
+        new terrain(0, 0, 0, 15, 20, asphaltpreload),
+        new terrain(0, 0, 0, 100, 100, grasspreload),
 
-        new shape("rect", -150, 500, -30, 100, 200, "darkgray"),
-        new shape("rect", 0, 460, 0, 300, 300, "darkgray"),
-        new shape("rect", 0, 700, 0, 1000, 300, "darkgray"),
-        new shape("rect", 0, 550, 0, 1000, 10, "dimgray"),
-        new shape("rect", 0, 850, 0, 1000, 10, "dimgray"),
+        //new shape("rect", 150, 500, 30, 100, 200, "darkgray"),
 
-        new shape("rect", -400, 700, 0, 100, 10, "yellow"),
-        new shape("rect", -200, 700, 0, 100, 10, "yellow"),
-        new shape("rect", 0, 700, 0, 100, 10, "yellow"),
-        new shape("rect", 200, 700, 0, 100, 10, "yellow"),
-        new shape("rect", 400, 700, 0, 100, 10, "yellow"),
+        // new shape("rect", -150, 500, -30, 100, 200, "darkgray"),
+        // new shape("rect", 0, 460, 0, 300, 300, "darkgray"),
+        // new shape("rect", 0, 700, 0, 1000, 300, "darkgray"),
+        // new shape("rect", 0, 550, 0, 1000, 10, "dimgray"),
+        // new shape("rect", 0, 850, 0, 1000, 10, "dimgray"),
 
-        new shape("rect", 225, -300, 45, 10, 200, "yellow"), 
-        new shape("rect", 225, -150, 45, 10, 200, "yellow"),
-        new shape("rect", 225, 0, 45, 10, 200, "yellow"), 
-        new shape("rect", 225, 150, 45, 10, 200, "yellow"),
-        new shape("rect", 225, 300, 45, 10, 200, "yellow"),
+        new shape("rect", -10, 17.5, 0, 2.5, 0.25, "yellow"),
+        new shape("rect", -5, 17.5, 0, 2.5, 0.25, "yellow"),
+        new shape("rect", 0, 17.5, 0, 2.5, 0.25, "yellow"),
+        new shape("rect", 5, 17.5, 0, 2.5, 0.25, "yellow"),
+        new shape("rect", 10, 17.5, 0, 2.5, 0.25, "yellow"),
 
-        new shape("rect", -225, -300, -45, 10, 200, "yellow"), 
-        new shape("rect", -225, -150, -45, 10, 200, "yellow"),
-        new shape("rect", -225, 0, -45, 10, 200, "yellow"), 
-        new shape("rect", -225, 150, -45, 10, 200, "yellow"),
-        new shape("rect", -225, 300, -45, 10, 200, "yellow"),
+        new shape("rect", 5.625, -7.5, 45, 0.25, 5, "yellow"), 
+        new shape("rect", 5.625, -3.75, 45, 0.25, 5, "yellow"),
+        new shape("rect", 5.625, 0, 45, 0.25, 5, "yellow"), 
+        new shape("rect", 5.625, 3.75, 45, 0.25, 5, "yellow"),
+        new shape("rect", 5.625, 7.5, 45, 0.25, 5, "yellow"),
 
-        new shape("rect", -300, 0, 0, 20, 800, "dimgray"),
-        new shape("rect", 300, 0, 0, 20, 800, "dimgray"),
+        new shape("rect", -5.625, -7.5, -45, 0.25, 5, "yellow"), 
+        new shape("rect", -5.625, -3.75, -45, 0.25, 5, "yellow"),
+        new shape("rect", -5.625, 0, -45, 0.25, 5, "yellow"), 
+        new shape("rect", -5.625, 3.75, -45, 0.25, 5, "yellow"),
+        new shape("rect", -5.625, 7.5, -45, 0.25, 5, "yellow"),
 
-        new shape("image", 300, 0, 90, 50, 200, lightpole),
-        new shape("image", 300, 150, 90, 50, 200, lightpole),
-        new shape("image", 300, -150, 90, 50, 200, lightpole),
+        new shape("rect", -7.5, 0, 0, 0.5, 20, "dimgray"),
+        new shape("rect", 7.5, 0, 0, 0.5, 20, "dimgray"),
+
+        // new shape("image", 300, 0, 90, 50, 200, lightpole),
+        // new shape("image", 300, 150, 90, 50, 200, lightpole),
+        // new shape("image", 300, -150, 90, 50, 200, lightpole),
     ]
     
     updatelist = terrain.concat(spritelist);
@@ -136,7 +139,7 @@ var camera = {
     },
 
     position : function(x, y, rot) {
-        this.distance = Math.sqrt(Math.pow(x-this.cx,2)+Math.pow(y-this.cy,2))*(this.czoom/100)
+        this.distance = (Math.sqrt(Math.pow(x-this.cx,2)+Math.pow(y-this.cy,2)))*scalar
         this.angle = degrees(Math.atan2((y-this.cy),(x-this.cx)))+this.cangle
         this.x2 = (Math.cos(radians(this.angle))*this.distance)
         this.y2 = (Math.sin(radians(this.angle))*this.distance)
@@ -196,13 +199,15 @@ var player = {
     start : function(x, y, angle, zoom) {
         // Config For The Car
         this.deceleration = 0.1
-        this.turnback = 0.01
+        this.turnback = 5
+        this.maxturndeg = 30
+        this.wheelbase = 3
 
         // Defining Starting Variables On Creation
-        this.width = 100;
-        this.height = this.width*2;
+        this.width = 2.5;
+        this.height = 5;
         this.speed = 0;
-        this.rotation = 0;
+        this.turndeg = 0;
         this.carimage = new Image();
         this.carimage.src = "car.png";
     },
@@ -210,50 +215,60 @@ var player = {
     // Move The Sprite When Update Is Called
     update : function() {
         // Update Positions
-        if (this.speed > 0) {
-            camera.cangle += this.rotation * this.speed/5;
-            camera.cx += (this.speed * Math.sin(radians(this.rotation*20))) * (Math.sin(radians(camera.cangle)));
-            camera.cy += (this.speed * Math.cos(radians(this.rotation*20))) * (Math.cos(radians(camera.cangle)));
+        this.turnrad = this.wheelbase/Math.tan(this.turndeg * (Math.PI/180))
+        this.xmov = this.turnrad - (Math.cos(this.speed/this.turnrad)*this.turnrad)
+        this.ymov = (Math.sin(this.speed/this.turnrad)*this.turnrad)
+        this.tandeg = degrees(Math.atan(this.xmov/this.ymov))
+        console.debug((((this.speed * Math.sin(radians(this.tandeg))) * (Math.sin(radians(camera.cangle))))/fps))
+        camera.cangle += (this.speed/this.turnrad * (180/Math.PI))/fps
+        if(this.turndeg != 0) {
+            camera.cx += (((this.speed * Math.sin(radians(this.tandeg))) * (Math.sin(radians(camera.cangle))))/fps)
+            camera.cy += (((this.speed * Math.cos(radians(this.tandeg))) * (Math.cos(radians(camera.cangle))))/fps)
+        } else {
+            camera.cx += ((this.speed * (Math.sin(radians(camera.cangle))))/fps)
+            camera.cy += ((this.speed * (Math.cos(radians(camera.cangle))))/fps)
         }
-        if (this.speed < 0) {
-            camera.cangle += this.rotation * this.speed/5;
-        }
-        if (this.rotation == 0) {
-            camera.cx += this.speed * (Math.sin(radians(camera.cangle)));
-            camera.cy += this.speed * (Math.cos(radians(camera.cangle)));
-        }
+                // if (this.speed > 0) {
+        //             }
+        // if (this.speed < 0) {
+        //     camera.cangle += this.rotation * this.speed/5;
+        // }
+        // if (this.rotation == 0) {
+        //     camera.cx += this.speed * (Math.sin(radians(camera.cangle)));
+        //     camera.cy += this.speed * (Math.cos(radians(camera.cangle)));
+        // }
 
-        // Physics
+        // Slow-Down
         if (!up && !down) {
             if (this.speed > 0) {this.speed -= this.deceleration; if(this.speed <=0){this.speed=0}} 
             else if (this.speed < 0) {this.speed += this.deceleration; if(this.speed >=0){this.speed=0}}
             else {this.speed = 0}
         }
         
-        if (this.rotation > 0 && !(left || right)) {this.rotation -= this.turnback * Math.abs(this.speed); if(this.rotation <=0){this.rotation=0}} 
-        else if (this.rotation < 0 && !(left || right)) {this.rotation += this.turnback * Math.abs(this.speed); if(this.rotation >=0){this.rotation=0}}
+        if (this.turndeg > 0 && !(left || right)) {this.turndeg -= this.turnback * Math.abs(this.speed/60); if(this.turndeg <=0){this.turndeg=0}} 
+        else if (this.turndeg < 0 && !(left || right)) {this.turndeg += this.turnback * Math.abs(this.speed/60); if(this.turndeg >=0){this.turndeg=0}}
         else if (!(left || right)) {this.rotation = 0}
 
         // Update Visuals
         wheelL = gameWindow.context;
         wheelL.save();
         wheelL.translate(((gameWindow.canvas.width/2 - this.width/3.4*(camera.czoom/100))), ((gameWindow.canvas.height/2 - this.height/3.8*(camera.czoom/100))));
-        wheelL.rotate(radians(this.rotation*20));
+        wheelL.rotate(radians(this.turndeg));
         wheelL.fillStyle = "black";
         wheelL.fillRect((this.width/10*(camera.czoom/100)) / -2, (this.height/6*(camera.czoom/100)) / -2, this.width/10*(camera.czoom/100), this.height/6*(camera.czoom/100));
         wheelL.restore();
 
         wheelR = gameWindow.context;
         wheelR.save();
-        wheelR.translate(((gameWindow.canvas.width/2 + this.width/3.4*(camera.czoom/100))), ((gameWindow.canvas.height/2 - this.height/3.8*(camera.czoom/100))));
-        wheelR.rotate(radians(this.rotation*20));
+        wheelR.translate(((gameWindow.canvas.width/2 + ((this.width/3.4)*(scalar)))), ((gameWindow.canvas.height/2 - ((this.height/3.8)*(scalar)))));
+        wheelR.rotate(radians(this.turndeg));
         wheelR.fillStyle = "black";
-        wheelR.fillRect((this.width/10*(camera.czoom/100)) / -2, (this.height/6*(camera.czoom/100)) / -2, this.width/10*(camera.czoom/100), this.height/6*(camera.czoom/100));
+        wheelR.fillRect(((this.width/10) / -2)*scalar, ((this.height/6) / -2)*scalar, (this.width/10)*(scalar), (this.height/6)*(scalar));
         wheelR.restore();
 
         car = gameWindow.context;
         car.fillStyle = "purple";
-        car.drawImage(this.carimage, gameWindow.canvas.width/2-(this.width/2*(camera.czoom/100)), gameWindow.canvas.height/2-(this.height/2*(camera.czoom/100)), this.width*(camera.czoom/100), this.height*(camera.czoom/100));
+        car.drawImage(this.carimage, (gameWindow.canvas.width/2)-((this.width/2)*(scalar)*(camera.czoom/100)), (gameWindow.canvas.height/2)-((this.height/2)*(scalar)*(camera.czoom/100)), this.width*(scalar)*(camera.czoom/100), this.height*(scalar)*(camera.czoom/100));
 
         upcount++
     }
@@ -280,11 +295,11 @@ function shape(type, x, y, angle, width, height, fill="black") {
         canvas.translate(((gameWindow.canvas.width/2 + this.pos[0])), ((gameWindow.canvas.height/2 - this.pos[1])));
         canvas.rotate(radians(this.pos[2]));
         if(this.type == 0) {
-            canvas.drawImage(this.fill, (this.width*(camera.czoom/100)) / -2, (this.height*(camera.czoom/100)) / -2, this.width*(camera.czoom/100), this.height*(camera.czoom/100));
+            canvas.drawImage(this.fill, (this.width*(scalar)*(camera.czoom/100)) / -2, (this.height*(scalar)*(camera.czoom/100)) / -2, this.width*(scalar)*(camera.czoom/100), this.height*(scalar)*(camera.czoom/100));
         }
         else if(this.type == 1) {
             canvas.fillStyle = this.fill; 
-            canvas.fillRect((this.width*(camera.czoom/100)) / -2, (this.height*(camera.czoom/100)) / -2, this.width*(camera.czoom/100), this.height*(camera.czoom/100));
+            canvas.fillRect((this.width*(scalar)*(camera.czoom/100)) / -2, (this.height*(scalar)*(camera.czoom/100)) / -2, this.width*(scalar)*(camera.czoom/100), this.height*(scalar)*(camera.czoom/100));
         }
         canvas.restore();
         upcount++
@@ -298,13 +313,13 @@ function terrain(x, y, angle, width, height, image, scalex=100, scaley=100) {
     this.width = width;
     this.height = height;
     this.image = image;
-    if (scalex <= 100) {this.iwidth = this.image.width * (scalex/100);} else {this.iwidth = this.image.width}
-    if (scaley <= 100) {this.iheight = this.image.height * (scaley/100);} else {this.iheight = this.image.height}
-    this.radlength = Math.sqrt(Math.pow(this.iwidth/2, 2) + Math.pow(this.iheight/2, 2))
+    if (scalex <= 100) {this.iwidth = (this.image.width * (scalex/100)) / scalar;} else {this.iwidth = this.image.width / scalar}
+    if (scaley <= 100) {this.iheight = (this.image.height * (scaley/100)) / scalar;} else {this.iheight = this.image.height / scalar}
+    console.debug(this.iwidth)
+    this.radlength = Math.sqrt(Math.pow(this.iwidth/2, 2) + Math.pow(this.iheight/2, 2)) * scalar
 
     this.tilex = Math.ceil(this.width/this.iwidth)
     this.tiley = Math.ceil(this.height/this.iheight)
-    console.debug(this.width, this.iheight)
 
     this.update = function() {
         for(i = 0; i < this.tiley; i++) {
@@ -320,7 +335,7 @@ function terrain(x, y, angle, width, height, image, scalex=100, scaley=100) {
                     canvas.rotate(radians(this.pos[2]));
                     if((this.x2 + this.iwidth/2) > (this.x + (this.width/2))){this.trimx = (((this.x + (this.width/2)) - (this.x2 + this.iwidth/2)))} else {this.trimx = 0}
                     if((this.y2 + this.iheight/2) > (this.y + (this.height/2))){this.trimy = ((this.y + (this.height/2)) - (this.y2 + this.iheight/2))} else {this.trimy = 0}
-                    canvas.drawImage(this.image, 0, 0 - this.trimy, this.iwidth + this.trimx, this.iheight + this.trimy, (this.iwidth*(camera.czoom/100)) / -2, (this.iheight*(camera.czoom/100)) / -2 - this.trimy, this.iwidth*(camera.czoom/100)+this.trimx, this.iheight*(camera.czoom/100)+this.trimy);
+                    canvas.drawImage(this.image, 0, (0 - this.trimy)*scalar, (this.iwidth + this.trimx) * scalar, (this.iheight + this.trimy) * scalar, ((this.iwidth*(camera.czoom/100)) / -2)*scalar, ((this.iheight*(camera.czoom/100)) / -2 - this.trimy)*scalar, (this.iwidth*(camera.czoom/100)+this.trimx)*scalar, (this.iheight*(camera.czoom/100)+this.trimy)*scalar);
                     canvas.restore();
                 } 
             }
@@ -329,17 +344,18 @@ function terrain(x, y, angle, width, height, image, scalex=100, scaley=100) {
     }
 }
 
-function testdot() {
-    this.x = 100
-    this.y = 100
-    this.width = 50
-    this.height = 50
+function testcirc() {
+    this.x = 5.2
+    this.y = 0
+    this.radius = 5.2
     this.angle = 0
 
     this.update = function() {
         canvas = gameWindow.context;
-        canvas.fillStyle = "purple";
-        canvas.fillRect(camera.position(this.x,this.y,this.angle)[0], camera.position(this.x,this.y,this.angle)[1], this.width, this.height);
+        canvas.beginPath();
+        canvas.arc((gameWindow.canvas.width/2)+camera.position(this.x,this.y,this.angle)[0], (gameWindow.canvas.height/2)-camera.position(this.x,this.y,this.angle)[1], this.radius*scalar, 0, 2*Math.PI);
+        canvas.stroke();
+        upcount++
     }
 }
 
@@ -379,8 +395,8 @@ function updateGameWindow() {
     if (lasttime + 125 <= d.getTime()) {
         lasttime = d.getTime();
         fpscount.text = `FPS: ${fpsrec * 8} / ${fps}`;
-        speedometer.text = `Speed: ${round(player.speed,3)}, Rotation: ${round(player.rotation,3)}`
-        posdebug.text = `Position: ${round(camera.cx,3)}, ${round(camera.cy,3)}, ${round(camera.cangle,3)}`
+        speedometer.text = `Speed: ${round(player.speed,1)}, Turn Angle: ${round(player.turndeg,1)}°, Turn Radius: ${round(player.turnrad,1)}, Res. Angle: ${round((player.speed/player.turnrad * (180/Math.PI)),1)}°`
+        posdebug.text = `Position: ${round(camera.cx,1)}, ${round(camera.cy,1)}, ${round(camera.cangle,1)}°`
         fpsrec = 0;
     }
 
@@ -405,8 +421,8 @@ function updateGameWindow() {
     gameWindow.clear();
 
     if(!pausemenu.paused) {
-        if (left && (player.rotation > -2)) {player.rotation += -0.1; }
-        if (right && (player.rotation < 2)) {player.rotation += 0.1; }
+        if (left && (player.turndeg > (player.maxturndeg*-1))) {player.turndeg -= (1); }
+        if (right && (player.turndeg < (player.maxturndeg))) {player.turndeg += (1); }
         if (up && (player.speed < 10)) {if(player.speed > 0) {player.speed += 0.1} else {player.speed += 0.3}}
         if (down && (player.speed > -10)) {if(player.speed < 0) {player.speed -= 0.1} else {player.speed -= 0.3}}
     }
