Cleaned up code and added comments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body style="margin: 0px; overflow: hidden;">
 <script src="index.js" defer> </script>
+<script src="objects.js" defer></script>
 <script src="maps.js" defer> </script>
 </body>
 </html>
