--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <style>
     #gamescreen {
-        background-color: black;
+        background-color: rgb(20, 145, 47);
     }
     </style>
 </head>
 <body style="margin: 0px; overflow: hidden;">
-<script src="index.js" defer> </script>
-<script src="objects.js" defer></script>
-<script src="maps.js" defer> </script>
+    <canvas id="maincanvas"></canvas>
+    <script src="index.js" defer> </script>
+    <script src="objects.js" defer></script>
+    <script src="maps.js" defer> </script>
 </body>
 </html>
  
