--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     }
     </style>
 </head>
-<body style="margin: 0px; overflow: hidden;">
+<body style="margin: 0px; overflow: hidden; position: fixed">
     <canvas id="maincanvas"></canvas>
     <script src="index.js" defer> </script>
     <script src="objects.js" defer></script>
