--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body style="margin: 0px; overflow: hidden; position: fixed">
     <canvas id="maincanvas"></canvas>
+    <script src="settings.js" defer> </script>
     <script src="index.js" defer> </script>
     <script src="objects.js" defer></script>
     <script src="maps.js" defer> </script>
