--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 <body style="margin: 0px; overflow: hidden; position: fixed">
     <canvas id="maincanvas"></canvas>
-    <script src="settings.js" defer> </script>
+    <script src="config.js" defer> </script>
     <script src="index.js" defer> </script>
-    <script src="objects.js" defer></script>
+    <script src="hud_objects.js" defer></script>
+    <script src="map_objects.js" defer></script>
     <script src="maps.js" defer> </script>
 </body>
 </html>
