--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="hud_objects.js" defer></script>
     <script src="map_objects.js" defer></script>
     <script src="maps.js" defer> </script>
+    <script src="mobile.js" defer> </script>
 </body>
 </html>
  
