--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
     <style>
     #gamescreen {
         background-color: rgb(10, 82, 25);
+    }
+    #maincanvas {
+        user-select: none;
     }
     </style>
 </head>
