--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Aiden's Aceable Driving Simulator">
+    <meta name="author" content="Aiden">
+    <title>Aceable Driving Sim</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
     <style>
     #gamescreen {
