--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <h2 style="font-size: 40px; left: 50%; top: 60%; position: absolute; transform: translate(-50%, -50%); font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Loading...</h2>
     </div>
     <canvas id="maincanvas"></canvas>
+    <script src="functions.js" defer> </script>
     <script src="config.js" defer> </script>
     <script src="index.js" defer> </script>
     <script src="hud_objects.js" defer></script>
