wait you can just like... add a console??

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init();</script>
+
     <meta charset="utf-8">
     <meta name="description" content="Aiden's Aceable Driving Simulator">
     <meta name="author" content="Aiden">
