--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="loading.gif" alt="Loading..." style="left: 50%; top: 40%; position: absolute; transform: translate(-50%, -50%);"/>
         <h2 style="font-size: 40px; left: 50%; top: 60%; position: absolute; transform: translate(-50%, -50%); font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Loading...</h2>
     </div>
-    <button id="requestMotionAccess" onclick="getMotionAccess()" style="display: none;"></button>
+    <button id="requestMotionAccess" style="">Get Motion Access</button>
     <canvas id="maincanvas"></canvas>
     <script src="functions.js" defer> </script>
     <script src="config.js" defer> </script>
