--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     }
     #maincanvas {
         user-select: none;
+        -webkit-user-select: none; /* Safari */
+        -ms-user-select: none; /* IE 10 and IE 11 */
     }
     </style>
 </head>
