--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     </style>
 </head>
-<body style="margin: 0px; overflow: hidden; position: fixed; touch-action: none;">
+<body style="margin: 0px; overflow: hidden; position: fixed; touch-action: none; user-select: none;">
     <div id="loadingscreen" style="width: 100%; height: 100%; z-index: 10; background-color: #c8eef8; position: absolute; top: 0%;">
         <img src="loading.gif" alt="Loading..." style="left: 50%; top: 40%; position: absolute; transform: translate(-50%, -50%);"/>
         <h2 style="font-size: 40px; left: 50%; top: 60%; position: absolute; transform: translate(-50%, -50%); font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Loading...</h2>
