--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="loading.gif" alt="Loading..." style="left: 50%; top: 40%; position: absolute; transform: translate(-50%, -50%);"/>
         <h2 style="font-size: 40px; left: 50%; top: 60%; position: absolute; transform: translate(-50%, -50%); font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Loading...</h2>
     </div>
-    <input id="requestMotionAccess" type="button" style="position: absolute;" value="Get Motion Access"/>
+    <input id="requestMotionAccess" type="button" style="position: absolute; display: none;" value="Get Motion Access"/>
     <canvas id="maincanvas"></canvas>
     <script src="functions.js" defer> </script>
     <script src="config.js" defer> </script>
