--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <title>Aceable Driving Sim</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
     <style>
+    body {
+        margin: 0px; 
+        overflow: hidden; 
+        position: fixed; 
+        touch-action: none;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -o-user-select: none;
+        user-select: none;
+    }
     #gamescreen {
         background-color: rgb(10, 82, 25);
     }
@@ -20,7 +33,7 @@
     }
     </style>
 </head>
-<body style="margin: 0px; overflow: hidden; position: fixed; touch-action: none; user-select: none;">
+<body unselectable="on">
     <div id="loadingscreen" style="width: 100%; height: 100%; z-index: 10; background-color: #c8eef8; position: absolute; top: 0%;">
         <img src="loading.gif" alt="Loading..." style="left: 50%; top: 40%; position: absolute; transform: translate(-50%, -50%);"/>
         <h2 style="font-size: 40px; left: 50%; top: 60%; position: absolute; transform: translate(-50%, -50%); font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Loading...</h2>
