--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </style>
 </head>
 <body unselectable="on">
+    <p style="position: absolute; z-index: -100; width: max-content; height: max-content; left: 50vw; top: 50vh; transform: translate(-50%, -50%); text-align: center;"><b>Aceable Driving Simulator - By Aiden C</b><br>Hey! You're not supposed to see this <br> If you came here by accident, make sure JavaScript is enabled, reload the page, or contact the developer: <br> nomadicalyt@gmail.com</p>
     <div id="loadingscreen" style="width: 100%; height: 100%; z-index: 10; background-color: #c8eef8; position: absolute; top: 0%;">
         <img src="loading.gif" alt="Loading..." style="left: 50%; top: 40%; position: absolute; transform: translate(-50%, -50%);"/>
         <h2 style="font-size: 40px; left: 50%; top: 60%; position: absolute; transform: translate(-50%, -50%); font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Loading...</h2>
