working on game save and import

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <h2 style="font-size: 40px; left: 50vw; top: 60vh; position: absolute; transform: translate(-50%, -50%); font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Loading...</h2>
     </div>
     <input id="requestMotionAccess" type="button" style="position: absolute; display: none;" value="Get Motion Access"/>
+    <textarea id="textbox" style="display: none; position: absolute; left: 50vw; top: 50vh; transform: translate(-50%, -50%); z-index: 10; width: 50vw; height: 80vh; white-space: pre; overflow-wrap: normal; overflow-x: scroll;"></textarea>
     <canvas id="maincanvas"></canvas>
     <script src="functions.js" defer> </script>
     <script src="config.js" defer> </script>
@@ -47,7 +48,6 @@
     <script src="hud_objects.js" defer></script>
     <script src="map_objects.js" defer></script>
     <script src="maps.js" defer> </script>
-    <script src="mobile.js" defer> </script>
 </body>
 </html>
  
