--- a/iframe.html
+++ b/iframe.html
@@ -18,7 +18,7 @@
         map = 1
         debug = false
         playerPosition = [0,10,0]
-        document.getElementById("myFrame").src = `file://./index.html?map=${map}&debug=${debug}`
+        document.getElementById("myFrame").src = `${window.location.substring(0,window.location.indexOf("iframe")-6)}?map=${map}&debug=${debug}`
         // document.getElementById("myFrame").src = `./index.html?map=${map}&debug=${debug}&playerPosition=${playerPosition}` // For Adjusting Starting Position from Default
     </script>
 </body>
